# localATISaero

./: .modbus.cpp.swp  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  aeronautics  cmake_install.cmake  config.json  fix_for_libttspico.txt  main.cpp  modbus.cpp
include/: .IEEE754.cpp.swp  CMakeLists.txt  IEEE754.cpp  IEEE754.h  Makefile  cmake_install.cmake  datalogger.cpp  datalogger.h
